fix_styles: left-align center sections on mobile (below 600px)

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -385,8 +385,10 @@ main .section.highlight {
   }
 }
 
-main .section.center .default-content-wrapper {
-  text-align: center;
+@media (width >= 600px) {
+  main .section.center .default-content-wrapper {
+    text-align: center;
+  }
 }
 
 @media (width >= 900px) {
